change exe name

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5.0)
-project(sfml-project VERSION 0.1.0)
+project(particle_sim VERSION 0.1.0)
 
 # As std::auto_ptr was removed in C++17, sfml-audio fails to compile
 # with following CXX standards. So instead of setting a global standard
