--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,3 +32,11 @@ target_include_directories(
 
 # Link required libraries (add sfml-audio and sfml-network if needed)
 target_link_libraries(${PROJECT_NAME} sfml-graphics sfml-window sfml-system)
+
+if(WIN32)
+    add_custom_command(
+        TARGET main
+        COMMENT "Copy OpenAL DLL"
+        PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy ${SFML_SOURCE_DIR}/extlibs/bin/$<IF:$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>,x64,x86>/openal32.dll $<TARGET_FILE_DIR:main>
+        VERBATIM)
+endif()
