turn off build shared libs

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ project(particle_sim VERSION 0.1.0)
 
 # Copy all the required SFML libs and main executable to bin/
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/bin/)
+option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
 # Build SFML
 add_subdirectory(vendors/sfml/)
