add fps and sps in config

--- a/.config
+++ b/.config
@@ -1,8 +1,11 @@
-smradius 30
+targetfps 30
+targetsps 150
+spawn 2000
+smradius 25
 viscosity 1.25
 gravity 8000
 mass 1
-targetdensity 4
-pressure 1000000
+targetdensity 3
+pressure 5000000
 mouse 17000
 collision 0.3
